--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=discovery-server
-server.port=${PORT:8761}
+server.port=8761
 
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=false
@@ -8,4 +8,3 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
 
-logging.level.root=info
