--- a/config-server/src/main/resources/configurations/tickets-service.yml
+++ b/config-server/src/main/resources/configurations/tickets-service.yml
@@ -1,19 +1,22 @@
+server:
+  port: 0
+
 spring:
   application:
     name: tickets-service
-  jpa:
-    hibernate:
-      ddl-auto: update
   datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/arqui?useSSL=false
     username: root
     password: root
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQLDialect
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
-
-server:
-  port: 0
 
 eureka:
   client:
