--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 		<module>user-service</module>
 		<module>events-service</module>
 		<module>api-gateway</module>
+		<module>shared-service</module>
 	</modules>
 
 	<build>
