--- a/config-server/src/main/resources/configurations/reservations-service.yml
+++ b/config-server/src/main/resources/configurations/reservations-service.yml
@@ -2,8 +2,6 @@ server:
   port: 0
 
 spring:
-  application:
-    name: reservations-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/arqui?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
@@ -23,24 +21,5 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-  instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-
-logging:
-  level:
-    root: DEBUG
-
-springdoc:
-  swagger-ui:
-    path: /swagger-ui.html
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: mappings
+  profiles:
+    include: shared-service
