--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -91,6 +91,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>pe.edu.upc.eventra</groupId>
+			<artifactId>shared-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
