--- a/pom.xml
+++ b/pom.xml
@@ -2,22 +2,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.5</version> <!-- 3.2.5 -->
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>pe.edu.upc.eventra</groupId>
 	<artifactId>microservices</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+
 	<properties>
 		<spring-cloud.version>2023.0.1</spring-cloud.version>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
 	<dependencies>
 
 	</dependencies>
@@ -36,11 +40,14 @@
 	</dependencyManagement>
 
 	<modules>
+		<module>config-server</module>
 		<module>discovery-server</module>
-		<module>user-service</module>
-		<module>events-service</module>
 		<module>api-gateway</module>
 		<module>shared-service</module>
+		<module>user-service</module>
+		<module>events-service</module>
+		<module>tickets-service</module>
+		<module>reservations-service</module>
 	</modules>
 
 	<build>
