--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -10,25 +10,20 @@ logging.level.root=info
 logging.level.org.springframework.cloud.gateway=debug
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=info
 
-
-
 # TypeOfUSer y User
 spring.cloud.gateway.routes[0].id=user-service
 spring.cloud.gateway.routes[0].uri=lb://user-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/typeofuser/**
-
 
 # TypeOfUSer y User
 spring.cloud.gateway.routes[1].id=user-service
 spring.cloud.gateway.routes[1].uri=lb://user-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
 
-
 # CategoryEvent y Event
 spring.cloud.gateway.routes[2].id=events-service
 spring.cloud.gateway.routes[2].uri=lb://events-service
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/categoryevent/**
-
 
 # CategoryEvent y Event
 spring.cloud.gateway.routes[3].id=events-service
@@ -44,3 +39,39 @@ spring.cloud.gateway.routes[4].predicates[0]=Path=/api/tickets/**
 spring.cloud.gateway.routes[5].id=reservations-service
 spring.cloud.gateway.routes[5].uri=lb://reservations-service
 spring.cloud.gateway.routes[5].predicates[0]=Path=/api/reservations/**
+
+# TypeOfUSer y User
+spring.cloud.gateway.routes[6].id=user-service
+spring.cloud.gateway.routes[6].uri=lb://user-service
+spring.cloud.gateway.routes[6].predicates[0]=Path=/api/auth/**
+
+# Configuración del servidor
+server.servlet.context-path=/
+
+# Configuración de Springdoc OpenAPI
+springdoc.enable-native-support=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+
+# Configuración de URLs para múltiples servicios
+springdoc.swagger-ui.urls[0].url=/v3/api-docs
+springdoc.swagger-ui.urls[0].name=api-gateway
+springdoc.swagger-ui.urls[0].display-name=api-gateway
+
+springdoc.swagger-ui.urls[1].url=/user-service/v3/api-docs
+springdoc.swagger-ui.urls[1].name=user-service
+springdoc.swagger-ui.urls[1].display-name=user-service
+
+springdoc.swagger-ui.urls[2].url=/tickets-service/v3/api-docs
+springdoc.swagger-ui.urls[2].name=tickets-service
+springdoc.swagger-ui.urls[2].display-name=tickets-service
+
+springdoc.swagger-ui.urls[3].url=/reservations-service/v3/api-docs
+springdoc.swagger-ui.urls[3].name=reservations-service
+springdoc.swagger-ui.urls[3].display-name=reservations-service
+
+springdoc.swagger-ui.urls[4].url=/events-service/v3/api-docs
+springdoc.swagger-ui.urls[4].name=events-service
+springdoc.swagger-ui.urls[4].display-name=events-service
