--- a/tickets-service/src/main/resources/application.properties
+++ b/tickets-service/src/main/resources/application.properties
@@ -18,3 +18,21 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 management.endpoints.web.exposure.include=mappings
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+server.servlet.context-path=/
+
+# Configuración de OpenAPI
+openapi.service.title=tickets-service doc
+openapi.service.version=1.0.0
+openapi.service.url=http://localhost:8080
+
+# Configuración de Springdoc OpenAPI y Swagger UI
+springdoc.enable-native-support=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+
+# Rutas de documentación de microservicios
+springdoc.swagger-ui.urls[0].url=/v3/api-docs
+springdoc.swagger-ui.urls[0].name=tickets-service
+springdoc.swagger-ui.urls[0].display-name=tickets-service
