--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -112,6 +112,10 @@
 			<version>1.7.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 
 	</dependencies>
 
