--- a/reservations-service/src/main/resources/application.properties
+++ b/reservations-service/src/main/resources/application.properties
@@ -5,19 +5,26 @@ server.port=0
 # Eureka client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
+# JPA y Datasource
 spring.jpa.hibernate.ddl-auto=update
-logging.level.root=DEBUG
-
 spring.datasource.url=jdbc:mysql://localhost:3306/arqui?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
+
+# Hibernate dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Logging
+logging.level.root=DEBUG
 
 # Configuración para Springdoc OpenAPI UI
 springdoc.swagger-ui.path=/swagger-ui.html
 
 management.endpoints.web.exposure.include=mappings
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 server.servlet.context-path=/
 
