--- a/tickets-service/pom.xml
+++ b/tickets-service/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 		<groupId>pe.edu.upc.eventra</groupId>
 		<version>1.0.0-SNAPSHOT</version>
-+	<artifactId>tickets-service</artifactId>
+	<artifactId>tickets-service</artifactId>
 	<name>tickets-service</name>
 	<description>Tickets microservice for Eventra</description>
 	<properties>
