SQL Initial Data

--- a/events-service/src/main/resources/application.properties
+++ b/events-service/src/main/resources/application.properties
@@ -37,3 +37,5 @@ springdoc.swagger-ui.urls[0].url=/v3/api-docs
 springdoc.swagger-ui.urls[0].name=events-service
 springdoc.swagger-ui.urls[0].display-name=events-service
 
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
