--- a/reservations-service/src/main/resources/application.properties
+++ b/reservations-service/src/main/resources/application.properties
@@ -43,3 +43,6 @@ springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 springdoc.swagger-ui.urls[0].url=/v3/api-docs
 springdoc.swagger-ui.urls[0].name=reservations-service
 springdoc.swagger-ui.urls[0].display-name=reservations-service
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
