--- a/tickets-service/src/main/resources/application.properties
+++ b/tickets-service/src/main/resources/application.properties
@@ -36,3 +36,6 @@ springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 springdoc.swagger-ui.urls[0].url=/v3/api-docs
 springdoc.swagger-ui.urls[0].name=tickets-service
 springdoc.swagger-ui.urls[0].display-name=tickets-service
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
