--- a/events-service/src/main/resources/application.properties
+++ b/events-service/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 spring.application.name=events-service
 
-server.port=0
+server.port=${PORT:0}
 
 # Eureka client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://${EUREKA_CLIENT:localhost:8761}/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 spring.jpa.hibernate.ddl-auto=update
 logging.level.root=DEBUG
 
-spring.datasource.url=jdbc:mysql://localhost:3306/arqui?useSSL=false
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/arqui?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # Configuración para Springdoc OpenAPI UI
 springdoc.swagger-ui.path=/swagger-ui.html
