--- a/reservations-service/src/main/resources/application.properties
+++ b/reservations-service/src/main/resources/application.properties
@@ -1,24 +1,23 @@
 spring.application.name=reservations-service
 
-server.port=0
+server.port=${PORT:0}
 
 # Eureka client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://${EUREKA_CLIENT:localhost:8761}/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 # JPA y Datasource
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/arqui?useSSL=false
+logging.level.root=DEBUG
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/arqui?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 
 # Hibernate dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# Logging
-logging.level.root=DEBUG
 
 # Configuración para Springdoc OpenAPI UI
 springdoc.swagger-ui.path=/swagger-ui.html
