--- a/events-service/src/main/resources/application.properties
+++ b/events-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 spring.jpa.hibernate.ddl-auto=update
 logging.level.root=DEBUG
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/arqui?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysql-db}:3306/arqui?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 
