--- a/reservations-service/src/main/resources/application.properties
+++ b/reservations-service/src/main/resources/application.properties
@@ -12,7 +12,7 @@ eureka.client.fetch-registry=true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.root=DEBUG
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/arqui?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysql-db}:3306/arqui?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 
