--- a/reservations-service/src/main/resources/application.properties
+++ b/reservations-service/src/main/resources/application.properties
@@ -10,7 +10,7 @@ eureka.client.fetch-registry=true
 
 # JPA y Datasource
 spring.jpa.hibernate.ddl-auto=update
-logging.level.root=DEBUG
+logging.level.root=info
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/arqui?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
