--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -7,7 +7,7 @@ eureka.client.service-url.defaultZone=http://${EUREKA_CLIENT:localhost:8761}/eur
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 spring.jpa.hibernate.ddl-auto=update
-logging.level.root=DEBUG
+logging.level.root=info
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/arqui?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
