--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -75,3 +75,11 @@ springdoc.swagger-ui.urls[3].display-name=reservations-service
 springdoc.swagger-ui.urls[4].url=/events-service/v3/api-docs
 springdoc.swagger-ui.urls[4].name=events-service
 springdoc.swagger-ui.urls[4].display-name=events-service
+
+spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+spring.cloud.gateway.globalcors.corsConfigurations[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations[/**].allowedMethods=*
+spring.cloud.gateway.globalcors.corsConfigurations[/**].allowedHeaders=*
+
+spring.main.web-application-type=reactive
+spring.main.allow-bean-definition-overriding=true
