--- a/reservations-service/src/main/resources/application.properties
+++ b/reservations-service/src/main/resources/application.properties
@@ -22,6 +22,7 @@ logging.level.root=DEBUG
 
 # Configuración para Springdoc OpenAPI UI
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.url=/reservations-service/v3/api-docs
 
 management.endpoints.web.exposure.include=mappings
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
@@ -37,10 +38,11 @@ openapi.service.url=http://localhost:8080
 springdoc.enable-native-support=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.swagger-ui.config-url=/reservations-service/v3/api-docs/swagger-config
+springdoc.api-docs.path=/reservations-service/v3/api-docs
 
 # Rutas de documentación de microservicios
-springdoc.swagger-ui.urls[0].url=/v3/api-docs
+springdoc.swagger-ui.urls[0].url=/reservations-service/v3/api-docs
 springdoc.swagger-ui.urls[0].name=reservations-service
 springdoc.swagger-ui.urls[0].display-name=reservations-service
 
