--- a/events-service/src/main/resources/application.properties
+++ b/events-service/src/main/resources/application.properties
@@ -13,8 +13,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/arqui?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
 # Configuración para Springdoc OpenAPI UI
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.url=/events-service/v3/api-docs
 
 management.endpoints.web.exposure.include=mappings
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
@@ -30,10 +33,11 @@ openapi.service.url=http://localhost:8080
 springdoc.enable-native-support=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.swagger-ui.config-url=/events-service/v3/api-docs/swagger-config
+springdoc.api-docs.path=/events-service/v3/api-docs
 
 # Rutas de documentación de microservicios
-springdoc.swagger-ui.urls[0].url=/v3/api-docs
+springdoc.swagger-ui.urls[0].url=/events-service/v3/api-docs
 springdoc.swagger-ui.urls[0].name=events-service
 springdoc.swagger-ui.urls[0].display-name=events-service
 
