--- a/tickets-service/src/main/resources/application.properties
+++ b/tickets-service/src/main/resources/application.properties
@@ -7,14 +7,17 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 spring.jpa.hibernate.ddl-auto=update
-logging.level.root=DEBUG
+logging.level.root=info
 
 spring.datasource.url=jdbc:mysql://localhost:3306/arqui?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
 # Configuración para Springdoc OpenAPI UI
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.url=/tickets-service/v3/api-docs
 
 management.endpoints.web.exposure.include=mappings
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
@@ -30,10 +33,11 @@ openapi.service.url=http://localhost:8080
 springdoc.enable-native-support=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.swagger-ui.config-url=/tickets-service/v3/api-docs/swagger-config
+springdoc.api-docs.path=/tickets-service/v3/api-docs
 
 # Rutas de documentación de microservicios
-springdoc.swagger-ui.urls[0].url=/v3/api-docs
+springdoc.swagger-ui.urls[0].url=/tickets-service/v3/api-docs
 springdoc.swagger-ui.urls[0].name=tickets-service
 springdoc.swagger-ui.urls[0].display-name=tickets-service
 
