--- a/tickets-service/src/main/resources/application.properties
+++ b/tickets-service/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # Configuración para Springdoc OpenAPI UI
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.url=/tickets-service/v3/api-docs
 
 management.endpoints.web.exposure.include=mappings
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
@@ -32,10 +33,11 @@ openapi.service.url=http://localhost:8080
 springdoc.enable-native-support=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.swagger-ui.config-url=/tickets-service/v3/api-docs/swagger-config
+springdoc.api-docs.path=/tickets-service/v3/api-docs
 
 # Rutas de documentación de microservicios
-springdoc.swagger-ui.urls[0].url=/v3/api-docs
+springdoc.swagger-ui.urls[0].url=/tickets-service/v3/api-docs
 springdoc.swagger-ui.urls[0].name=tickets-service
 springdoc.swagger-ui.urls[0].display-name=tickets-service
 
