Agrega servicios de payment y notification, y actualiza otros servicios

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -45,6 +45,26 @@ spring.cloud.gateway.routes[6].id=user-service
 spring.cloud.gateway.routes[6].uri=lb://user-service
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/auth/**
 
+# Notifications
+spring.cloud.gateway.routes[7].id=notification-service
+spring.cloud.gateway.routes[7].uri=lb://notification-service
+spring.cloud.gateway.routes[7].predicates[0]=Path=/api/notifications/**
+
+# Payments
+spring.cloud.gateway.routes[8].id=payment-service
+spring.cloud.gateway.routes[8].uri=lb://payment-service
+spring.cloud.gateway.routes[8].predicates[0]=Path=/api/payments/**
+
+# Refunds
+spring.cloud.gateway.routes[9].id=payment-service
+spring.cloud.gateway.routes[9].uri=lb://payment-service
+spring.cloud.gateway.routes[9].predicates[0]=Path=/api/refunds/**
+
+# Statuses
+spring.cloud.gateway.routes[10].id=payment-service
+spring.cloud.gateway.routes[10].uri=lb://payment-service
+spring.cloud.gateway.routes[10].predicates[0]=Path=/api/statuses/**
+
 # Configuración del servidor
 server.servlet.context-path=/
 
@@ -75,6 +95,14 @@ springdoc.swagger-ui.urls[3].display-name=reservations-service
 springdoc.swagger-ui.urls[4].url=/events-service/v3/api-docs
 springdoc.swagger-ui.urls[4].name=events-service
 springdoc.swagger-ui.urls[4].display-name=events-service
+
+springdoc.swagger-ui.urls[5].url=/payment-service/v3/api-docs
+springdoc.swagger-ui.urls[5].name=payment-service
+springdoc.swagger-ui.urls[5].display-name=payment-service
+
+springdoc.swagger-ui.urls[6].url=/notification-service/v3/api-docs
+springdoc.swagger-ui.urls[6].name=notification-service
+springdoc.swagger-ui.urls[6].display-name=notification-service
 
 spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
 spring.cloud.gateway.globalcors.corsConfigurations[/**].allowedOrigins=*
