--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=api-gateway
 server.port=8080
 
 # Eureka client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://${EUREKA_CLIENT:localhost:8761}/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # Log
