--- a/events-service/src/main/resources/application.properties
+++ b/events-service/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.application.name=events-service
 server.port=0
 
 # Eureka client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://${EUREKA_CLIENT:localhost:8761}/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 spring.jpa.hibernate.ddl-auto=update
 logging.level.root=DEBUG
 
-spring.datasource.url=jdbc:mysql://localhost:3306/arqui?useSSL=false
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/sellmaster?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 
