--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -3,14 +3,14 @@ spring.application.name=payment-service
 server.port=0
 
 # Eureka client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://${EUREKA_CLIENT:localhost:8761}/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 # JPA y Datasource
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/arqui?useSSL=false
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/sellmaster?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 
