--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -10,9 +10,9 @@ eureka.client.fetch-registry=true
 
 # JPA y Datasource
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/sellmaster?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/arqui?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:QaZwsx12#00}
 
 # Hibernate dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
