--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -9,9 +9,9 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 spring.jpa.hibernate.ddl-auto=update
 logging.level.root=info
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/sellmaster?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/arqui?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:QaZwsx12#00}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
