--- a/tickets-service/src/main/resources/application.properties
+++ b/tickets-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 spring.jpa.hibernate.ddl-auto=update
 logging.level.root=info
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/arqui?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/arqui?useSSL=true&allowPublicKeyRetrieval=true
 spring.datasource.username=${MYSQL_USERNAME:root}
 spring.datasource.password=${MYSQL_PASSWORD:QaZwsx12#00}
 
