--- a/reservations-service/src/main/resources/application.properties
+++ b/reservations-service/src/main/resources/application.properties
@@ -34,7 +34,7 @@ server.servlet.context-path=/
 # Configuración de OpenAPI
 openapi.service.title=reservations-service doc
 openapi.service.version=1.0.0
-openapi.service.url=http://localhost:8080
+openapi.service.url=http://${URL_SERVICE:localhost}:8080
 
 # Configuración de Springdoc OpenAPI y Swagger UI
 springdoc.enable-native-support=true
