--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -33,7 +33,7 @@ server.servlet.context-path=/
 # Configuración de OpenAPI
 openapi.service.title=notification-service doc
 openapi.service.version=1.0.0
-openapi.service.url=http://localhost:8080
+openapi.service.url=http://${URL_SERVICE:localhost}:8080
 
 # Configuración de Springdoc OpenAPI y Swagger UI
 springdoc.enable-native-support=true
