--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -105,7 +105,7 @@ springdoc.swagger-ui.urls[6].name=notification-service
 springdoc.swagger-ui.urls[6].display-name=notification-service
 
 spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
-spring.cloud.gateway.globalcors.corsConfigurations[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations[/**].allowedOrigins=http://localhost:5173
 spring.cloud.gateway.globalcors.corsConfigurations[/**].allowedMethods=*
 spring.cloud.gateway.globalcors.corsConfigurations[/**].allowedHeaders=*
 
